Fix background on mobile and add more spacing between questions

--- a/client/css/theme.css
+++ b/client/css/theme.css
@@ -174,7 +174,7 @@ input[type=text]:not(:disabled), input[type=email]:not(:disabled), input[type=pa
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 1000px) {
+@media only screen and (max-width: 1000px) {
     html::before {
         background-color: #BD4F6C;
         background-image: linear-gradient(#BD4F6C 0%, #D7816A 74%);
@@ -195,19 +195,5 @@ input[type=text]:not(:disabled), input[type=email]:not(:disabled), input[type=pa
     html::before {
         background-color: #BD4F6C;
         background-image: linear-gradient(#BD4F6C 0%, #D7816A 74%);
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    html::before {
-        background-color: #BD4F6C;
-        background-image: linear-gradient(#D7816A 0%, #BD4F6C 74%);
-    }
-}
-
-@media only screen and (max-width: 350px) {
-    html::before {
-        background-color: #BD4F6C;
-        background-image: linear-gradient(#D7816A 0%, #BD4F6C 74%);
     }
 }
